testsuite/poke.pkl/struct-ind-diag-2.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int foo;
  };

(Foo {})->foo; /* { dg-error "referring offset" } */
